--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-streamlit==1.36.0
-beautifulsoup4
-requests
-langchain
-langchain-google-genai  
-langchain-groq 
-chromadb==0.5.3
-langchain-chroma
-dataclasses-json==0.6.7
-langchain-community==0.2.9
-
+streamlit==1.12.0
+beautifulsoup4==4.11.1
+requests==2.28.1
+langchain-google-genai==0.0.1  # Adjust this to the correct version if it doesn't match
+langchain-groq==0.0.1  # Adjust this to the correct version if it doesn't match
+faiss-cpu==1.7.2
+langchain==0.0.1  # Adjust this to the correct version if it doesn't match
